# QRopticalFileTransfer

./: MIT_LICENCE.txt  Makefile  Makefile_arm  Makefile_arm64  Makefile_armv7a  Makefile_x86_64  Makefile_x86_64_release  README.txt  buildall.sh  cleanall.sh  common_decoder_encoder.h  decoder_api_lib.cpp  encoder.h  encoder_api_lib.cpp  encoder_x86.files  encoder_x86.includes  env.sh  globaldefs.h  ka9q_fac_test.cpp  main.cpp  open_rs_encoder.cpp  open_rs_encoder.h  public_decoder_api.h  public_encoder_api.h  qr_frame_producer.cpp  qr_frame_producer.h  single_fac_test.cpp  webuploaderjs.html  webuploaderjs.php
andrapp1/QRfiles1/: gradle.properties  local.properties
andrapp1/QRfiles1/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
andrapp1/QRfiles1/app/src/androidTest/java/pl/pwrobel/opticalfiletransfer/: ExampleInstrumentedTest.java
andrapp1/QRfiles1/app/src/androidTest/java/qrfiles/pwrobel/myapplication/: ExampleInstrumentedTest.java
andrapp1/QRfiles1/app/src/main/: AndroidManifest.xml
andrapp1/QRfiles1/app/src/main/cpp/: native-lib.cpp
andrapp1/QRfiles1/app/src/main/java/pl/pwrobel/opticalfiletransfer/: AboutFragment.java  AboutFragmentLGPL.java  CameraController.java  CameraPreviewSurface.java  CameraWorker.java  ChooserDialog.java  CustomProgressBar.java  DialogQ1.java  DialogQ2.java  DialogQ3.java  DialogQ4.java  DialogQ5.java  DialogQ6.java  DirAdapter.java  ExtFileFilter.java  FileUtil.java  GridButtons.java  HelpDialogDismisser.java  HelpFragment.java  HorizontalNumberPicker.java  HorizontalNumberPickerListener.java  PreviewSizeController.java  PrivacyPolicyFragment.java  QRSurface.java  Qrfiles.java  RegexFileFilter.java  SettingsFragment.java  Shader.java  SizeExceededDialog.java  SizeExceededDialogDismisser.java  SquareLayout.java  TransmissionController.java  Versions.java
andrapp1/QRfiles1/app/src/main/java/qrfiles/pwrobel/myapplication/: AboutFragment.java  CameraController.java  CameraPreviewSurface.java  CameraWorker.java  ChooserDialog.java  CustomProgressBar.java  DialogQ1.java  DialogQ2.java  DialogQ3.java  DialogQ4.java  DirAdapter.java  ExtFileFilter.java  FileUtil.java  HelpFragment.java  HorizontalNumberPicker.java  HorizontalNumberPickerListener.java  PrivacyPolicyFragment.java  QRSurface.java  Qrfiles.java  RegexFileFilter.java  SettingsFragment.java  Shader.java  SquareLayout.java  TransmissionController.java  Versions.java
andrapp1/QRfiles1/app/src/main/res/drawable/: bordershape.xml
andrapp1/QRfiles1/app/src/main/res/layout/: about_fragment.xml  aboutlgpl_fragment.xml  activity_qrfiles.xml  add_layout.xml  content_file_browse.xml  content_qrfiles.xml  content_upload_screen.xml  file_chooser_title.xml  help_fragment.xml  horizontal_number_picker.xml  privacypolicy_fragment.xml  settings_fragment.xml  size_exceeded.xml
andrapp1/QRfiles1/app/src/main/res/menu/: mainmenu.xml  menu_qrfiles.xml
andrapp1/QRfiles1/app/src/main/res/raw/: fsh  qrfsh  qrvsh  vsh  webuploaderjs.html
andrapp1/QRfiles1/app/src/main/res/values/: attrs.xml  bool.xml  bools.xml  colors.xml  dimens.xml  integers.xml  strings.xml  styles.xml
andrapp1/QRfiles1/app/src/main/res/values-ja/: strings.xml
andrapp1/QRfiles1/app/src/main/res/values-pl/: strings.xml
andrapp1/QRfiles1/app/src/main/res/values-pt/: strings.xml
andrapp1/QRfiles1/app/src/main/res/values-ru/: strings.xml
andrapp1/QRfiles1/app/src/test/java/pl/pwrobel/opticalfiletransfer/: ExampleUnitTest.java
andrapp1/QRfiles1/app/src/test/java/qrfiles/pwrobel/myapplication/: ExampleUnitTest.java
andrapp1/QRfiles1/gradle/wrapper/: gradle-wrapper.properties
bin_jpeg/: jpeglib.h  note.txt
bin_jpeg/arch_arm/: libjpeg.so.9.1.0
decoder/: decoder.h  decoder_test.cpp  decoder_wrapper.cpp  decoder_wrapper.h  qr_frame_decoder.cpp  qr_frame_decoder.h  rs_decoder.cpp  rs_decoder.h  test2_pubapi.cpp
fileutil/: fileops.cpp  fileops.h
hash-library/: sample_program.cpp  sha256.cpp
libqrencoder_wrapper/: Makefile  libqrencoder_wrapper.cpp  libqrencoder_wrapper.h  libqrencoder_wrapper_test.cpp
linux_qrgen/: glrenderer.cpp  glrenderer.h  main_qrgen.cpp
release_x86_64_linux_uploader/: README.txt
win32encoder_libs/: fec.h  fec.lib  frameencoder.lib  libqrencoder_wrapper.lib  public_encoder_api.h  winMakefile
zxing_lib/: BufferBitmapSource.cpp  BufferBitmapSource.h
zxing_lib/arch_arm64/: iconv.c
